--- a/VriendApp/app/src/main/AndroidManifest.xml
+++ b/VriendApp/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
 
         <!--
-             TODO: Before you run your application, you need a Google Maps API key.
 
              To get one, follow the directions here:
 
@@ -23,7 +22,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyAL_kQkbiEVIPO6Ao4s2v_82Nw_J9qGKs0" />
 
         <activity
             android:name=".MapsActivity"
