--- a/VriendApp/app/build.gradle
+++ b/VriendApp/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
 }
